--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.2.2",
     "gray-matter-loader": "0.0.10",
+    "netlify-cli": "^10.3.1",
     "node-sass": "^5.0.0",
     "nodemon": "^1.18.9",
     "nuxt-responsive-loader": "^2.0.1",
